# shelfscope

./: README.md  api.py  app.py  pyproject.toml
src/: __init__.py  config.py  utils.py
src/services/: __init__.py  detector.py  grouping.py  visualization.py
templates/: index.html
tests/: conftest.py  test_app.py  test_fixtures_smoke.py  test_grouping.py
